<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sfreyman.djam.MainActivity$PlaceholderFragment">

    <AutoCompleteTextView
        android:id="@+id/searchSongList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/songSearch"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:singleLine="true"
        android:dropDownHeight="wrap_content"/>

    <EditText
        android:id="@+id/liveStreamTitle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/liveStreamTitle"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:singleLine="true"
        android:dropDownHeight="wrap_content"
        android:layout_below="@+id/searchSongList"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:visibility="gone"/>



    <ProgressBar
        android:id="@+id/currentSongAlbumArtworkLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="148dp"
        android:layout_below="@+id/searchSongList" />

    <TextView
        android:id="@+id/pickSongPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickSongPrompt"
        android:textSize="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_above="@+id/currentSongTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp" />

    <ImageView
        android:id="@+id/currentSongAlbumArtwork"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/albumArtworkListDescription"
        android:layout_below="@+id/searchSongList"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/currentSongTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/currentSongAlbumArtwork"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/currentSongArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/currentSongTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"/>

    <Button
        android:id="@+id/goLiveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goLive"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:visibility="invisible"
        android:backgroundTint="@color/colorPrimary"
        android:layout_below="@+id/currentSongArtist"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
